<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/orderStatus_orderNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/Woo.OrderDetail.TextAppearance.SectionTitle"
        tools:text="#51 Michelle Fredrickson"/>

    <TextView
        android:id="@+id/orderStatus_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderStatus_orderNum"
        android:paddingBottom="@dimen/card_item_padding_intra_h"
        android:paddingTop="@dimen/card_item_padding_intra_h"
        android:textAppearance="@style/Woo.OrderDetail.TextAppearance"
        tools:text="Created today at 9:51 AM"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orderStatus_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/orderStatus_created"
        android:focusable="true"
        android:clickable="true"
        android:padding="4dp"
        android:contentDescription="@string/orderdetail_change_order_status"
        android:background="?attr/selectableItemBackground">

        <co.innoshop.android.widgets.FlowLayout
            android:id="@+id/orderStatus_orderTags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/orderstatus_contentDesc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="false"
            android:importantForAccessibility="no"
            android:background="@drawable/ic_edit_pencil"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>

