...
    -->
    <string name="all">All</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_stores">Loading stores</string>
    <string name="signout">Log out</string>
    <string name="my_store">My store</string>
    <string name="orders">Orders</string>
    <string name="email_address">Email address</string>
    <string name="currency_total">%1$s%2$s</string>
    <string name="currency_total_negative">-%1$s%2$s</string>
    <string name="order_total">Order total</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
...
    <!--
        Order Detail Views
    -->
    <string name="customer_information">Customer information</string>
    <string name="customer_full_name">%1$s %2$s</string>
    <string name="orderdetail_orderstatus_ordernum">Order #%s</string>
    <string name="orderdetail_orderstatus_heading">#%1$s %2$s %3$s</string>
    <string name="orderdetail_orderstatus_created">Created %1$s</string>
    <string name="orderdetail_shipping_method">Shipping method</string>
    <string name="orderdetail_shipping_details">Shipping details</string>
    <string name="orderdetail_billing_details">Billing details</string>
    <string name="orderdetail_email_contentdesc">email customer</string>
    <string name="orderdetail_call_or_message_contentdesc">Call or message customer</string>
    <string name="orderdetail_call_customer">Call</string>
...
