<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/ordersContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">

        <!-- Orders List View -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ordersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <co.innoshop.android.widgets.WCEmptyView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/load_more_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_large"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>

</merge>
